removed a bunch of things